--- a/macros_de_la_materia.lyx
+++ b/macros_de_la_materia.lyx
@@ -3,110 +3,6 @@
 \begin_document
 \begin_header
 \textclass article
-\begin_preamble
-%\date{}  % Sacamos la fecha del principio
-\hyphenation{dis-po-si-ti-vo re-gis-tro di-se-ña-do con-si-de-rar-se} %  Indicamos cómo separar las palabras. Cada palabra se separa con un espacio.
-% ---------------------------------------------------------------
-\usepackage[most]{tcolorbox} % Permite hacer "box" con colores para destacar cosas.
-\usepackage{lmodern} % Parece que mejora el aspecto de las fuentes vectoriales o algo asi
-\usepackage[T1]{fontenc} % Utiliza un cifrado de 8 bits para los caracteres permitiendo usar los acentuados sin problemas
-\usepackage{float}
-\usepackage{units}
-\usepackage{graphicx}
-\usepackage{esint}
-\usepackage{mathrsfs}
-\usepackage{dsfont}
-\usepackage{amsmath} % Si no pongo esto me tira el error  de "\iint already defined..."
-\usepackage{sectsty} % Esto es para cambiar el color y estilo de los títulos de secciones.
-\usepackage{xcolor} % No sé por qué hay dos paquetes de colores.
-\usepackage{color} % No sé por qué hay dos paquetes de colores.
-\usepackage{placeins} % Es para que los flotantes no se vallan a cualquier lado.  Para usar "placeins" colocar codigo TeX en forma de \FloatBarrier y los flotantes no pasan de ahi.
-\usepackage{caption}
-% ---------------------------------------------------------------------------------------------
-\definecolor{my_gray}{RGB}{200, 200, 200} % Este es el que uso en las ecuaciones con el comando '\GRISCLARO'
-% Estilo de títulos de secciones, subsecciones, etc.
-\chapterfont{\bfseries\sffamily\color[rgb]{.1,.1,.3}}
-\sectionfont{\bfseries\sffamily\color[rgb]{.1,.1,.4}}
-\subsectionfont{\bfseries\sffamily\color[rgb]{.2,.2,.6}}
-\subsubsectionfont{\bfseries\sffamily\color[rgb]{.2,.2,.8}}
-\paragraphfont{\bfseries\sffamily\color[rgb]{.2,.2,.8}}
-% Colores para los listados de código
-\definecolor{comentarios_color}{RGB}{190, 190, 190}
-\definecolor{cadenas_color}{RGB}{57, 167, 157}
-\definecolor{keyword_color}{RGB}{100,100,180}
-\definecolor{fondocodigo_color}{RGB}{250, 255, 255}
-\definecolor{identifier_color}{RGB}{50,50,120}
-% ---------------------------------------------------------------------------------------------
-% Configuración de epígrafes
-\DeclareCaptionFont{CaptionLabel}{\color[rgb]{.1,.1,.7}\bfseries\sffamily}
-\DeclareCaptionFont{CaptionText}{\color[rgb]{.3,.3,.8}}
-\captionsetup[figure]{margin=40pt,font=normalsize,labelfont={CaptionLabel,bf},textfont=CaptionText}
-\captionsetup[table]{margin=40pt,font=normalsize,labelfont={CaptionLabel,bf},textfont=CaptionText}
-% ---------------------------------------------------------------------------------------------
-% Definiciones de 'tcolorbox':
-\definecolor{CalculosAuxiliaresBoxBackgroundColor}{RGB}{240, 240, 240}
-\definecolor{CalculosAuxiliaresBoxFrameColor}{RGB}{80, 80, 190}
-\definecolor{ComentarioBoxBackgroundColor}{RGB}{240, 240, 240}
-\definecolor{ComentarioBoxFrameColor}{RGB}{160, 160, 160}
-\definecolor{EcuacionImportanteBoxBackgroundColor}{RGB}{240, 255, 240}
-\definecolor{EcuacionImportanteBoxFrameColor}{RGB}{50, 160, 50}
-
-\newtcolorbox{CalculosAuxiliares} {
-title=\bfseries\sffamily Cálculos Auxiliares,
-colback=CalculosAuxiliaresBoxBackgroundColor,
-colframe=CalculosAuxiliaresBoxFrameColor,
-center, 
-valign=top, 
-halign=left,
-%before skip=0.8cm, % Espacio en blanco antes del recuadro.
-%after skip=1.2cm, % Espacio en blanco después del recuadro.
-left = 2mm,
-right = 2mm,
-breakable,
-enhanced
-}
-
-\newtcolorbox{Comentario}[1] {
-title=\bfseries\sffamily #1,
-colback=ComentarioBoxBackgroundColor,
-colframe=ComentarioBoxFrameColor,
-center, 
-valign=top, 
-halign=left,
-%before skip=0.8cm, % Espacio en blanco antes del recuadro.
-%after skip=1.2cm, % Espacio en blanco después del recuadro.
-breakable,
-enhanced
-}
-
-\newtcolorbox{Importante}[1] {
-title=\bfseries\sffamily #1,
-colback=EcuacionImportanteBoxBackgroundColor,
-colframe=EcuacionImportanteBoxFrameColor,
-center, 
-valign=top, 
-halign=left,
-before skip=1cm, % Espacio en blanco antes del recuadro.
-after skip=1cm, % Espacio en blanco después del recuadro.
-breakable,
-enhanced
-}
-% ----------------------------------------------------------------------------------------------
-\hypersetup{ % Esto es para los "botones" de citas y referencias no tengan un cuadrado horrible alrededor.
-    colorlinks,
-    linkcolor={blue!50!black},
-    citecolor={blue!50!black},
-    urlcolor={blue}
-}
-% ----------------------------------------------------------------------------------------------
-\edef\timestamp{%
-  \the\year
-  \two@digits\month
-  \two@digits\day
-  \two@digits{\numexpr(\time*2 - 59)/120\relax}%
-  \two@digits{\numexpr\time - 60*\numexpr(\time*2 - 59)/120\relax\relax}%
-}
-\end_preamble
 \use_default_options true
 \begin_modules
 customHeadersFooters
@@ -220,13 +116,18 @@ newcommand*{
 MacrosDeLaMateria}{}
 \end_layout
 
+\begin_layout Plain Layout
+
+% Este "if" es para no incluir más de una vez el archivo con las macros.
+\end_layout
+
 \end_inset
 
 
 \end_layout
 
 \begin_layout Standard
-\begin_inset Note Comment
+\begin_inset Note Note
 status open
 
 \begin_layout Plain Layout
@@ -240,6 +141,12 @@ Esto es un comentario, no se imprime en el PDF
 \begin_layout Plain Layout
 En este archivo podés definir todas las macros que son específicas de esta
  materia.
+ Si tenés varios archivos Lyx para esta materia (e.g.
+ apuntes de la teórica, apuntes de la práctica, guías, parciales, etc.) todos
+ ellos deben incluir este archivo de macros.
+ Entonces definís las macros una única vez y las tenés siempre disponibles.
+ Y si por algún motivo modificares alguna, se modifica automáticamente en
+ todos tus documentos.
 \end_layout
 
 \end_inset
@@ -250,6 +157,14 @@ En este archivo podés definir todas las macros que son específicas de esta
 \begin_layout Standard
 \begin_inset FormulaMacro
 \newcommand{\KET}[1]{\left|#1\right\rangle }
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset FormulaMacro
+\newcommand{\HAMILTONIANO}{\mathscr{H}}
 \end_inset
 
 
