--- a/macros2018.lyx
+++ b/macros2018.lyx
@@ -1,7 +1,9 @@
-#LyX 2.1 created this file. For more info see http://www.lyx.org/
-\lyxformat 474
+#LyX 2.3 created this file. For more info see http://www.lyx.org/
+\lyxformat 544
 \begin_document
 \begin_header
+\save_transient_properties true
+\origin unavailable
 \textclass article
 \use_default_options true
 \maintain_unincluded_children false
@@ -9,16 +11,18 @@
 \language_package default
 \inputencoding auto
 \fontencoding global
-\font_roman default
-\font_sans default
-\font_typewriter default
-\font_math auto
+\font_roman "default" "default"
+\font_sans "default" "default"
+\font_typewriter "default" "default"
+\font_math "auto" "auto"
 \font_default_family default
 \use_non_tex_fonts false
 \font_sc false
 \font_osf false
-\font_sf_scale 100
-\font_tt_scale 100
+\font_sf_scale 100 100
+\font_tt_scale 100 100
+\use_microtype false
+\use_dash_ligatures true
 \graphics default
 \default_output_format default
 \output_sync 0
@@ -49,6 +53,7 @@
 \suppress_date false
 \justification true
 \use_refstyle 1
+\use_minted 0
 \index Index
 \shortcut idx
 \color #008000
@@ -60,7 +65,10 @@
 \tocdepth 3
 \paragraph_separation indent
 \paragraph_indentation default
-\quotes_language english
+\is_math_indent 0
+\math_numbering_side default
+\quotes_style english
+\dynamic_quotes 0
 \papercolumns 1
 \papersides 1
 \paperpagestyle default
@@ -112,109 +120,9 @@ MacrosDosMilDieciocho}{}
 status open
 
 \begin_layout Plain Layout
-
-\series bold
-¿Cómo utilizar las macros?
-\end_layout
-
-\begin_layout Enumerate
-Incluirlas como documento hijo en el menú 
-\begin_inset Quotes eld
-\end_inset
-
-Insertar -- Archivo -- Documento hijo
-\begin_inset Quotes erd
-\end_inset
-
-.
-\end_layout
-
-\begin_layout Enumerate
-En las opciones de inclusión conviene utilizar 
-\begin_inset Quotes eld
-\end_inset
-
-Incorporar
-\begin_inset Quotes erd
-\end_inset
-
-.
- Con 
-\begin_inset Quotes eld
-\end_inset
-
-Anexar
-\begin_inset Quotes erd
-\end_inset
-
- casi siempre funciona, pero a veces me ha generado problemas que 
-\begin_inset Quotes eld
-\end_inset
-
-Incorporar
-\begin_inset Quotes erd
-\end_inset
-
- no los generó.
-\end_layout
-
-\begin_layout Enumerate
-Usar las macros 
-\begin_inset Formula $\smiley$
-\end_inset
-
-.
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset Note Note
-status open
-
-\begin_layout Plain Layout
-Colores:
-\end_layout
-
-\begin_layout Plain Layout
-Los colores se deben definir en el preámbulo del documento.
- Para meterlos en una macro lo que hay que hacer es 
-\end_layout
-
-\begin_layout Plain Layout
-
-\backslash
-textcolor{«color»}{«argumento de la macro»}
-\end_layout
-
-\begin_layout Plain Layout
-y ya se los puede usar.
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset Note Note
-status open
-
-\begin_layout Plain Layout
 Macros generales
 \end_layout
 
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset FormulaMacro
-\newcommand{\INDICADORA}[1]{\mathbf{1}\left\{  #1\right\}  }
 \end_inset
 
 
@@ -451,6 +359,14 @@ Funciones
 \end_layout
 
 \begin_layout Standard
+\begin_inset FormulaMacro
+\newcommand{\INDICADORA}[1]{\mathbf{1}\left\{  #1\right\}  }
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
 \begin_inset Note Note
 status open
 
@@ -521,7 +437,7 @@ Operaciones
 
 \begin_layout Standard
 \begin_inset FormulaMacro
-\newcommand{\EVALUADOEN}[3]{\left.#1\right\rfloor _{#2}^{#3}}
+\newcommand{\EVALUADOEN}[3]{\left.#1\right|_{#2}^{#3}}
 \end_inset
 
 
